Fixed some errors, want to check on mobile

--- a/index.css
+++ b/index.css
@@ -3,6 +3,15 @@ body {
     padding:0;
     background: linear-gradient(to left, rgba(255, 222, 33, 0.9), rgb(255, 100, 196));;
 }
+a {
+    color:rgb(255, 0, 149);;
+    text-decoration: none;
+}
+
+a:hover {
+    color: red;
+}
+
 
 p
 {
